--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "materialize-css": "^0.99.0",
-    "vue": "^2.3.3",
+    "vue": "^2.4.2",
     "vue-axios": "^2.0.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
+    "vuelidate": "^0.5.0",
+    "vuetify": "^0.14.11",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
