--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,9 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vuelidate": "^0.5.0",
-    "vuetify": "^0.14.11",
-    "vuex": "^2.3.1"
+    "vuetify": "^0.15.1",
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
