--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "vuelidate": "^0.5.0",
     "vuetify": "^0.15.1",
     "vuex": "^2.3.1",
+    "vuex-persistedstate": "^2.0.0",
     "vuex-router-sync": "^4.3.0"
   },
   "devDependencies": {
